# triboon

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  VERIFY.md  docker-compose.yml  docs-android-tv-testing.md  docs-app-updates.md  docs-architecture.md  docs-continue-watching.md  docs-phase1-brief.md  docs-playback-and-iptv.md  docs-player-regression-map.md  docs-release-audit.md  docs-setup.md  docs-streaming-performance.md  package.json
.github/: CODEOWNERS  dependabot.yml
android/: build.gradle  gradle.properties  settings.gradle
bench/: RESULTS.md  android-qa-fixture-server.js  android-tv-smoke.ps1  android-tv-stress.ps1  cut-apk-release.ps1  mock-wyzie.js  provider-bench.js  real-rar-smoke.js  resume-latency.js  search-debug.js  size-debug.js  startup-latency.js  stat-followup.js  sync-debug.js  sync-variants.js  tv-eval.ps1  verify-before-update.ps1  verify-live.js  windows-client-smoke-server.js
clients/windows-px8/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/windows-px8/src-tauri/capabilities/: catalog.json  connect.json  player.json
clients/windows-px8/src-tauri/src/: main.rs  player.rs
demo/: mock-xtream.js
docker/: entrypoint.sh
server/: archive.js  audible.js  auth.js  index.js  library-db.js  newznab.js  nntp.js  nzb.js  opensubs.js  pipeline.js  pubaudio.js  rar.js  scoring.js  store.js  tmdb.js  trakt.js  transcode.js  vfs.js  xmltv-worker.js  xmltv.js  yenc.js  ytmusic.js  zip.js
test/: archive-fixtures.js  archive.test.js  audiobook.test.js  e2e.test.js  helpers.js  iptv-cache.test.js  library-db.test.js  mock-nntp.js  phase2.test.js  phase4.test.js  release-contract.test.js  security.test.js  tmdb.test.js  xmltv.test.js  (+2 more)
(+74 files in other folders)
