[package]
name = "triboon-px8"
version = "2.8.1"
description = "Triboon native Windows GPU client"
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
# libmpv2 wraps the packaged libmpv-2.dll. GPU decode, HDR handling, and audio output live here.
# The feature remains explicit so Rust-only security tests can still run on non-Windows hosts.
libmpv2 = { version = "=6.0.0", default-features = false, optional = true }

[features]
default = ["player"]
player = ["dep:libmpv2"]

[profile.release]
strip = true
lto = true
